[package]
name = "tycho-tonapi"
version = "0.1.6"
edition = "2024"
rust-version = "1.89.0"

[dependencies]
anyhow = "1"
arc-swap = "1.7.1"
bytes = "1.10.1"
bytesize = { version = "2.1.0", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive"] }
futures-util = "0.3.31"
humantime = "2.3.0"
moka = { version = "0.12", features = ["sync"] }
parking_lot = "0.12.5"
prost = "0.14.1"
scopeguard = "1.2.0"
serde = { version = "1", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.47", features = ["rt-multi-thread", "macros", "sync"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tonic = { version = "0.14", features = ["server", "gzip", "deflate", "zstd"] }
tonic-prost = "0.14.2"
tracing = "0.1.41"
weedb = "0.6.0"

tikv-jemallocator = { version = "0.6.0", features = [
    "unprefixed_malloc_on_supported_platforms",
    "background_threads",
    "profiling",
] }

tycho-block-util = { version = "0.3.4" }
tycho-core = { version = "0.3.4", features = ["cli"] }
tycho-storage = { version = "0.3.4" }
tycho-types = { version = "0.3.0", features = ["sync", "base64", "models", "tycho", "rand9"] }
tycho-util = { version = "0.3.4", features = ["cli"] }

[patch.crates-io]
tycho-block-util = { git = "https://github.com/broxus/tycho.git", rev = "f541531d0b38d21922cbb01ac372432459277959" }
tycho-core = { git = "https://github.com/broxus/tycho.git", rev = "f541531d0b38d21922cbb01ac372432459277959" }
tycho-storage = { git = "https://github.com/broxus/tycho.git", rev = "f541531d0b38d21922cbb01ac372432459277959" }
tycho-util = { git = "https://github.com/broxus/tycho.git", rev = "f541531d0b38d21922cbb01ac372432459277959" }

[build-dependencies]
anyhow = "1"
tonic-prost-build = "*"

[features]
default = ["s3"]
s3 = ["tycho-core/s3"]

[package.metadata.cargo-shear]
ignored = ["prost", "tonic-prost"]
